@startuml
title Final Project - Simplified Global Class Diagram

left to right direction
hide circle
hide methods
hide attributes

skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam backgroundColor white
skinparam defaultFontName Arial
skinparam nodesep 75
skinparam ranksep 75

skinparam Class {
  BorderColor #334155
  BackgroundColor white
  FontColor #0F172A
}

skinparam Arrow {
  Color #475569
  Thickness 1
}

package "Users & Access Control" {
  class User
  class Role
  class Permission
}

package "Academic Management" {
  class LanguageProgram
  class Course
  class CourseClass
  class Schedule
  class Room
}

package "Academic Operations" {
  class AttendanceRecord
  class TeacherResource
  class Review
}

package "Financial Management" {
  class StudentTuition
  class TuitionPayment
  class EmployeePayment
  class ScholarshipActivation
}

package "Communication & Notifications" {
  class Message
  class DatabaseNotification
}

User "*" -- "*" Role : has
Role "*" -- "*" Permission : grants

LanguageProgram "1" -- "*" Course
Course "1" -- "*" CourseClass
CourseClass "1" -- "*" Schedule
Schedule "*" -- "0..1" Room

User "1" -- "*" CourseClass : teaches
User "*" -- "*" CourseClass : enrolls

CourseClass "1" -- "*" AttendanceRecord
User "1" -- "*" AttendanceRecord

User "1" -- "*" TeacherResource
CourseClass "1" -- "*" TeacherResource

User "1" -- "0..1" StudentTuition
Course "1" -- "*" StudentTuition
User "1" -- "*" TuitionPayment
User "1" -- "0..1" EmployeePayment
User "1" -- "*" ScholarshipActivation

User "1" -- "*" Message : sends/receives
User "1" -- "*" DatabaseNotification : receives
User "1" -- "*" Review : writes

@enduml